# incolume.py.prospect.calculator

./: README.md  pyproject.toml
incolume/py/prospect/calculator/: __init__.py  operators.py
tests/: test_incolume_py_prospect_calculator.py  test_incolume_py_prospect_calculator_operators.py
