[tool.poetry]
name = "incolume.py.prospect.calculator"
version = "0.2.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
  {include="incolume", from=""}
]

[tool.poetry.dependencies]
python = "^3.10"
toml = {extras = ["tomli"], version = "^0.10.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
